<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.mertakdut</groupId>
	<artifactId>EpubParser</artifactId>
	<version>1.0.95</version>
	<packaging>jar</packaging>

	<name>EpubParser</name>
	<url>https://github.com/mertakdut/EpubParser</url>
	<description>Parses .epub files, provides reading page by page.</description>

	<properties>

	</properties>

	<scm>
		<connection>scm:git:https://github.com/mertakdut/EpubParser.git</connection>
		<developerConnection>scm:git:https://github.com/mertakdut/EpubParser.git</developerConnection>
		<url>http://github.com/mertakdut/EpubParser</url>
		<tag>HEAD</tag>
	</scm>

	<developers>
		<developer>
			<id>mertakdut</id>
			<name>Mert Akdut</name>
			<email>mert.akdut@gmail.com</email>
			<organization>codefandevelopment</organization>
			<organizationUrl>http://codefandevelopment.com/</organizationUrl>
			<roles>
				<role>Project-Administrator</role>
				<role>Developer</role>
			</roles>
			<timezone>+2</timezone>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>

	<prerequisites>
		<maven>3.0.4</maven>
	</prerequisites>

	<dependencies>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.17.0</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.10.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.13</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.5.6</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>1.17</source>
					<target>1.17</target>
					<release>17</release>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>